--- a/public/gallery.html
+++ b/public/gallery.html
@@ -4,9 +4,9 @@
   	<meta charset="utf-8">
   	<meta name="viewport" content="initial-scale=1, width=device-width">
   	
-  	<link rel="stylesheet" href="../public/css/global.css">
-  	<link rel="stylesheet" href="../public/css/gallery.css">
-	<link rel="stylesheet" href="../public/css/navbar2.css">
+  	<link rel="stylesheet" href="/public/css/global.css">
+  	<link rel="stylesheet" href="/public/css/gallery.css">
+	<link rel="stylesheet" href="/public/css/navbar2.css">
   	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cherish:wght@400&display=swap">
   	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap">
   	
