--- a/public/catalogue.html
+++ b/public/catalogue.html
@@ -4,10 +4,10 @@
   	<meta charset="utf-8">
   	<meta name="viewport" content="initial-scale=1, width=device-width">
   	
-  	<link rel="stylesheet" href="/public/css/global.css">
-  	<link rel="stylesheet" href="/public/css/catalogue.css">
-	<link rel="stylesheet" href="/public/css/footer1.css">
-	<link rel="stylesheet" href="/public/css/navbar3.css">
+  	<link rel="stylesheet" href="css/global.css">
+  	<link rel="stylesheet" href="css/catalogue.css">
+	<link rel="stylesheet" href="css/footer1.css">
+	<link rel="stylesheet" href="/css/navbar3.css">
   	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cherish:wght@400&display=swap">
   	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap">
 </head>
@@ -154,9 +154,9 @@
 			<div class="navbar">
       			<div class="navbar-background">
                 <div class="navbar-links">
-                    <strong><a href="/public/index.html" class="home-link">Home</a></strong>
-                    <strong><a href="/public/html/gallery.html" class="gallery-link">Gallery</a></strong>
-                    <strong><a href="/public/html/catalogue.html" class="order-link">Order Here</a></strong>
+                    <strong><a href="index.html" class="home-link">Home</a></strong>
+                    <strong><a href="gallery.html" class="gallery-link">Gallery</a></strong>
+                    <strong><a href="catalogue.html" class="order-link">Order Here</a></strong>
       			</div>
       			<div class="logo-section">
         				<div class="logo-date">29th</div>
