--- a/public/index.html
+++ b/public/index.html
@@ -61,8 +61,8 @@
         <div class="navbar-background"></div>
         <div class="navbar-links">
           <strong><a href="index.html" class="home-link">Home</a></strong>
-          <strong><a href="html/gallery.html" class="gallery-link">Gallery</a></strong>
-          <strong><a href="html/catalogue.html" class="order-link">Order Here</a></strong>
+          <strong><a href="gallery.html" class="gallery-link">Gallery</a></strong>
+          <strong><a href="catalogue.html" class="order-link">Order Here</a></strong>
         </div>
         <div class="logo-section">
           <div class="logo-date">29th</div>
