--- a/public/catalogue.html
+++ b/public/catalogue.html
@@ -7,7 +7,7 @@
   	<link rel="stylesheet" href="css/global.css">
   	<link rel="stylesheet" href="css/catalogue.css">
 	<link rel="stylesheet" href="css/footer1.css">
-	<link rel="stylesheet" href="/css/navbar3.css">
+	<link rel="stylesheet" href="css/navbar3.css">
   	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cherish:wght@400&display=swap">
   	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap">
 </head>
@@ -15,7 +15,7 @@
   	<div class="rectangle-parent">
     		<div class="frame-parent">
 			    <div class="frame-item-container">
-					<img class="frame-item" alt="" src="/public/assets/images/image 10.png">
+					<img class="frame-item" alt="" src="assets/images/image 10.png">
 					<div class="caption">Customize Your Own</div>
 						<div class="price-caption">
 						  <table class="price-table">
@@ -30,7 +30,7 @@
 					</div>		
 
       			<div class="frame-item-container">
-					<img class="frame-item" alt="" src="/public/assets/images/image 11.png">
+					<img class="frame-item" alt="" src="assets/images/image 11.png">
 					<div class="caption">Vanilla White</div>
 						<div class="price-caption">
 						  <table class="price-table">
@@ -45,7 +45,7 @@
 					</div>	
 
 				<div class="frame-item-container">
-					<img class="frame-item" alt="" src="/public/assets/images/image 12.png">
+					<img class="frame-item" alt="" src="assets/images/image 12.png">
 					<div class="caption">Brownies & Cocoa</div>
 						<div class="price-caption">
 						  <table class="price-table">
@@ -60,7 +60,7 @@
 					</div>
 
 				<div class="frame-item-container">
-					<img class="frame-item" alt="" src="/public/assets/images/image 13.png">
+					<img class="frame-item" alt="" src="assets/images/image 13.png">
 					<div class="caption">Caramel Latte</div>
 						<div class="price-caption">
 						  <table class="price-table">
@@ -75,7 +75,7 @@
 					</div>	
 
 				<div class="frame-item-container">
-					<img class="frame-item" alt="" src="/public/assets/images/image 14.png">
+					<img class="frame-item" alt="" src="assets/images/image 14.png">
 					<div class="caption">So Berry</div>
 						<div class="price-caption">
 						  <table class="price-table">
@@ -90,7 +90,7 @@
 					</div>	
 
 				<div class="frame-item-container">
-					<img class="frame-item" alt="" src="/public/assets/images/image 15.png">
+					<img class="frame-item" alt="" src="assets/images/image 15.png">
 					<div class="caption">So Fruit</div>
 						<div class="price-caption">
 						  <table class="price-table">
@@ -105,7 +105,7 @@
 					</div>	
 
       			<div class="frame-item-container">
-					<img class="frame-item" alt="" src="/public/assets/images/image 16.png">
+					<img class="frame-item" alt="" src="assets/images/image 16.png">
 					<div class="caption">Tiramisu Wash</div>
 						<div class="price-caption">
 						  <table class="price-table">
@@ -120,7 +120,7 @@
 					</div>	
 
       			<div class="frame-item-container">
-					<img class="frame-item" alt="" src="/public/assets/images/image 17.png">
+					<img class="frame-item" alt="" src="assets/images/image 17.png">
 					<div class="caption">Light Coffe</div>
 						<div class="price-caption">
 						  <table class="price-table">
@@ -141,7 +141,7 @@
       			<div class="group-item"></div>
     		</div>
 				<img class="group-icon" alt="" src="Group 85.png">
-				<img class="image-30-icon" alt="" src="/public/assets/images/bg bawah cat.png">
+				<img class="image-30-icon" alt="" src="assets/images/bg bawah cat.png">
     		
     		<div class="group-wrapper">
       			<div class="rectangle-container">
@@ -193,9 +193,9 @@
     <div class="footer-right">
       <h4>Connect with Us</h4>
         <div class="social-media">
-          <a href="https://facebook.com" class="footlink" target="_blank"><img src="/public/assets/logo/facebook.svg" alt="Facebook"></a>
-          <a href="https://twitter.com" class="footlink" target="_blank"><img src="/public/assets/logo/twitter.svg" alt="Twitter"></a>
-          <a href="https://www.instagram.com/29thicecream" class="footlink" target="_blank"><img src="/public/assets/logo/instagram.svg" alt="Instagram"></a>
+          <a href="https://facebook.com" class="footlink" target="_blank"><img src="assets/logo/facebook.svg" alt="Facebook"></a>
+          <a href="https://twitter.com" class="footlink" target="_blank"><img src="assets/logo/twitter.svg" alt="Twitter"></a>
+          <a href="https://www.instagram.com/29thicecream" class="footlink" target="_blank"><img src="assets/logo/instagram.svg" alt="Instagram"></a>
         </div>
 		<a href="https://29-icecream.carrd.co" class="footlink" target="_blank">29-icecream.carrd.co</a>
     </div>
